# molmo-handtracker

./: .gitignore  .gitmodules  README.md  autotracker.ipynb  compute_2d_flow.py  environment.yml  full_environment.yml  handtrack.py  mediapipe.ipynb  output_with_hand_tracking.avi  requirements.txt  setup.py  test.py
examples/: track_video.py
modules/: install_submodule.sh
molmo/: README.md  pyproject.toml  pyvenv.cfg
molmo/launch_scripts/: eval_captioner.py  eval_downstream.py  train_captioner.py  train_multitask_model.py  utils.py
molmo/olmo/: __init__.py  checkpoint.py  config.py  hf_molmo.py  html_utils.py  image_vit.py  model.py  optim.py  tokenizer.py  train.py  util.py
molmo/olmo/data/: __init__.py  academic_datasets.py  academic_datasets_manual.py  collator.py  data_formatter.py  dataset.py  download_urls.py  iterable_dataset_mixture.py  model_preprocessor.py  pixmo_datasets.py
molmo/olmo/eval/: __init__.py  evaluators.py  inf_evaluator.py  vqa.py
molmo/scripts/: convert_hf_to_molmo.py  dataset_visualize.py  download_data.py  mm_eval.py  train.py  unshard.py
molmo/tests/data/: test_data_iterator.py  test_preprocessor.py
molmo_cotrack.egg-info/: PKG-INFO  SOURCES.txt
molmo_handtracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: cotracker.ipynb  test_molmo.ipynb
optical_flow/: README.md  __init__.py  compute_2d_flow.py  compute_flow.yaml  compute_position_diff.py  flow_compute_utils.py  get_point_tracks_and_strap_embs.py  track_gripper.py  visualize_flow.py  visualize_trajectories.py
preprocessing/: find_start.py  hdf5_to_mp4.py
temp_script/: copy_files.sh
visualization/: analyze_tracking.py
